--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": null,
-    "database": "passport_demo",
+    "password": "yourRootPassword",
+    "database": "itinerary_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
+    
   },
   "test": {
     "username": "root",
@@ -12,12 +13,12 @@
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
+    
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+   
+    "use_env_variable":"JAWSDB_URL",
     "dialect": "mysql"
+    
   }
 }
