Add es6 linting to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,5 +24,11 @@
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "prettier/prettier": "error"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2017,
+  },
+  "env": {
+    "es6": true
   }
 }
