--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "npm run lint",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "lint": "eslint *.js --quiet",
     "fix": "eslint --fix .",
     "watch": "nodemon server.js"
@@ -16,11 +16,14 @@
   "dependencies": {
     "animate.css": "^3.7.2",
     "bcryptjs": "2.4.3",
+    "body-parser": "^1.19.0",
     "bulma-calendar": "^6.0.7",
+    "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.1",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.4.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.8.6",
