--- a/config/config.json
+++ b/config/config.json
@@ -16,9 +16,9 @@
     
   },
   "production": {
+    "dialect": "mysql",
+    "use_env_variable":"JAWSDB_URL"
    
-    "use_env_variable":"JAWSDB_URL",
-    "dialect": "mysql"
-    
   }
+  
 }
